refactor: cleanup Mockito matchers and enhance AuditService with user context extraction logic